--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -36,3 +37,18 @@
     transform: rotate(360deg);
   }
 }
+
+.login{
+  text-align: center;
+  background-color: blue;
+}
+
+.loginForm{
+  background-color: rgb(0, 0, 0);
+  box-shadow: inset;
+  font-family: 'Times New Roman', Times, serif;
+  text-align: center;
+  
+
+}
+
