--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .App-link {
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+
+.alta{
+  background-color: rgb(214, 48, 255);
+  }
+
