--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
   background-color: rgb(214, 48, 255);
   text-align: center;
   padding-bottom: 50px;
-
+  margin: 250px;
+  border-radius: 8px;
   }
 
