--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,6 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  
+  background: linear-gradient(45deg, red, blue, deeppink, blue, red, blue, deeppink, blue);
 }
 
