--- a/src/App.css
+++ b/src/App.css
@@ -76,5 +76,7 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(45deg, red, blue, deeppink, blue, red, blue, deeppink, blue);
+  background-size: 800%;
+  border-radius: 10px;
 }
 
