--- a/src/App.css
+++ b/src/App.css
@@ -44,12 +44,20 @@
 }
 
 .loginForm{
-  background-color: rgb(25, 134, 125);
   box-sizing: border-box;
+  background-color: rgb(25, 134, 125);
   font-family: 'Times New Roman', Times, serif;
   text-align: center;
   margin: 45px;
-  padding: auto;
+  padding: -200;
+  border-radius: 40px;
+  margin-bottom: 1px;
+  border: 1px;
+  display: inline-flexbox;
+  box-sizing: border-box;
+  overflow: hidden;
+  transition: 0,2s;
+  box-shadow: 0 0;
 }
 
 .palta{
