--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 
 .alta{
-  background-color: rgb(214, 48, 255);
+  background-color: #1a0321;
   text-align: center;
   padding-bottom: 50px;
   margin: 250px;
@@ -47,10 +47,32 @@
   }
 
 .Boton{
+  position: relative;
+  display: inline-block;
+  padding: 0px 0px;
   color: #fff;
-  border-radius: 40px;
-  margin-right: -105px;
-  box-shadow:  0 0 0 0 rgb(145, 64, 248, 0.5), 0 0 0 0 rgb(39, 200, 255, 0.5);
-  transition: transform 0.3s aese, box-shadow 0.3s aese;
+  letter-spacing: 4px;
+  font-size: -10px;
+  text-decoration: none;
+  overflow: hidden;
+  transition: 0.2s;
+  border-radius: 15px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
+.Boton:hover{
+  background: #a945c7;
+  box-shadow: 0 0 10px #a945c7, 0 0 40px #a945c7, 0 0 80px #a945c7;
+  transition-delay: 1s;
+}
+.Boton span{
+  position: absolute;
+  display: block;
+}
+#span{
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #a945c7);
+}
