--- a/src/App.css
+++ b/src/App.css
@@ -84,24 +84,60 @@
 }
 
 .loginForm{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  background-color: rgb(25, 134, 125);
-  font-family: 'Times New Roman', Times, serif;
+  width: 400px;
+  background: #340742;
   text-align: center;
-  margin: 45px;
-  padding: -200;
-  border-radius: 40px;
-  margin-bottom: 1px;
-  border: 1px;
-  display: inline-flexbox;
-  box-sizing: border-box;
-  overflow: hidden;
-  transition: 0,2s;
-  box-shadow: 0 0;
+  margin: auto;
+  margin-top: 40px;
+  border-radius: 4px;
+  font-family: 'Times New Roman', Times, serif;
+  color: beige;
+  font-size: 20px;
+  margin-bottom: 20px;
+
 }
 
 .palta{
-  padding: 5px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif;
+}
+.paltita{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+}
+.form1{
+  width: 100%;
+  height: 50px;
+  max-width: 400px;
+  position: relative;
+  overflow: hidden;
+}
+.form1 input{
+  width: 100%;
+  height: 100%;
+  background: none;
+  color: #fff;
+  padding-top: 20px;
+  border: none;
+  outline: 0px;
+}
+.form1 .gmail1{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  
 }
 
 .boton1{
