--- a/src/App.css
+++ b/src/App.css
@@ -137,8 +137,32 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-  
+  border-bottom: 1px solid #61dafb;
 }
+.form1 .gmail1:after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 100%;
+  border-bottom: 3px solid #4b6f79;
+  transform: translateX(-100%);
+  transition: all 0,3s ease;
+}
+.gmail2{
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  transition: all 0,3s ease;
+  color: #fff;
+}
+.form1 input:focus + .gmail1 .gmail2, .form1 input:valid + .gmail1 .gmail2{
+  transform: translate(-150%);
+  font-size: 14px;
+  color: #4b6f79;
+}
+S
 
 .boton1{
   background-color: black;
