--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+*{
+  background-color: beige;
+}
 .App {
   text-align: center;
 
@@ -38,100 +41,3 @@
   }
 }
 
-
-.alta{
-  background-color: #1a0321;
-  text-align: center;
-  padding-bottom: 50px;
-  margin: 250px;
-  border-radius: 8px;
-  }
-
-.Boton{
-  position: relative;
-  display: inline-block;
-  padding: 0px 0px;
-  color: #fff;
-  letter-spacing: 4px;
-  font-size: -10px;
-  text-decoration: none;
-  overflow: hidden;
-  transition: 0.2s;
-  border-radius: 15px;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-.Boton:hover{
-  background: #a945c7;
-  box-shadow: 0 0 10px #a945c7, 0 0 40px #a945c7, 0 0 80px #a945c7;
-  transition-delay: 1s;
-}
-.Boton span{
-  position: absolute;
-  display: block;
-}
-#span{
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, #a945c7);
-}
-
-.login{
-  text-align: center;
-  background-color: blue;
-}
-
-.loginForm{
-  box-sizing: border-box;
-  background-color: rgb(25, 134, 125);
-  font-family: 'Times New Roman', Times, serif;
-  text-align: center;
-  margin: 45px;
-  padding: -200;
-  border-radius: 40px;
-  margin-bottom: 1px;
-  border: 1px;
-  display: inline-flexbox;
-  box-sizing: border-box;
-  overflow: hidden;
-  transition: 0,2s;
-  box-shadow: 0 0;
-}
-
-.palta{
-  padding: 5px;
-}
-
-.boton1{
-  background-color: black;
-  cursor: pointer;
-  border: none;
-  padding: 16px 32px;
-  color: #000000;
-  position: relative;
-  border-radius: 12px;
-}
-.boton2{
-  text-align: center;
-  content: "";
-  width: 10%;
-  height: 10%;
-  background: linear-gradient(45deg, red, blue, deeppink, blue, red, blue, deeppink, blue);
-  background-size: 800%;
-  border-radius: 10px;
-  animation: glowing 20s linear infinite;
-}
-
-@keyframes glowing{
-0%{
-  background-position: 0 0;
-}
-50%{
-  background-position: 400% 0;
-}
-100%{
-  background-position: 0 0;
-}
-}
