--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Times New Roman', Times, serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .App {
   text-align: center;
@@ -204,3 +207,4 @@
   background-position: 0 0;
 }
 }
+
