--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 *{
-  background-color: #fff0be;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -102,14 +101,16 @@
   text-align: center;
   margin: auto;
   margin-top: 40px;
+  border: 3px solid #000000;
   border-radius: 4px;
   font-family: 'Times New Roman', Times, serif;
   color: rgb(255, 255, 255);
-  font-size: 15px;
+  font-size: 4px;
   margin-bottom: 10px;
-  position: absolute;
+  position: relative;
+  overflow: hidden;
 }
-
+ 
 .palta{
   margin: 10px;
   padding: 0;
@@ -125,15 +126,14 @@
   background: #fff;
 }
 .form1{
-    
-  position: relative;
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 .form1 input{
   width: 100%;
   height: 100%;
   background: none;
-  color: #fff;
+  color: #1d0000;
   padding-top: 20px;
   border: none;
   outline: 0px;
@@ -145,7 +145,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-  border-bottom: 1px solid #61dafb;
+  border-bottom: 1px solid #0f1a1d;
 }
 .form1 .gmail1:after{
   content: '';
@@ -183,14 +183,14 @@
   position: relative;
   border-radius: 12px;
   transition: all 1s ease;
-  box-shadow: .5rem .5rem;
+  box-shadow: .3rem .3rem;
 }
 .boton2{
   text-align: center;
   content: "";
   width: 30%;
   height: 30%;
-  background: linear-gradient(45deg, rgb(149, 56, 255), rgb(243, 154, 176), rgb(188, 132, 240), rgb(155, 63, 230), rgb(55, 0, 255), rgb(113, 113, 241), rgb(245, 163, 206), rgb(217, 151, 255));
+  background: linear-gradient(45deg, rgb(199, 180, 219), rgb(243, 154, 176), rgb(188, 132, 240), rgb(159, 138, 177), rgb(189, 173, 245), rgb(113, 113, 241), rgb(245, 163, 206), rgb(217, 151, 255));
   background-size: 800%;
   border-radius: 12px;
   animation: glowing 45s linear infinite;
