--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,5 +1,5 @@
 *{
-    background-image: url('./fff.png');
+    background-image: url('./img/fff.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -7,4 +7,33 @@
 body{
     width: auto;
     height: auto;
+}
+
+/* Estilo del spinner overlay */
+.spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Asegura que esté por encima de todo el contenido */
+}
+
+/* Estilo del spinner */
+.spinner {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top: 4px solid #3498db; /* Color del spinner */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite; /* Duración y estilo de la animación */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
