modificando css de inicio

--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,7 +1,9 @@
 *{
-    background-image: url('./img/fff.png');
+    background-image: url('img/fff.png');
     background-size: cover;
     background-repeat: no-repeat;
+    width: auto;
+    height: auto;
 }
 
 body{
