--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,5 +1,5 @@
 *{
-    background-image: url('img/fff.png');
+    background-image: url('../fff.png');
     background-size: cover;
     background-repeat: no-repeat;
     width: auto;
@@ -12,7 +12,7 @@ body{
 }
 
 /* Estilo del spinner overlay */
-.spinner-overlay {
+.spinner-overlay{
     position: fixed;
     top: 0;
     left: 0;
@@ -26,7 +26,7 @@ body{
 }
 
 /* Estilo del spinner */
-.spinner {
+.spinner{
     border: 4px solid rgba(255, 255, 255, 0.3);
     border-top: 4px solid #3498db; /* Color del spinner */
     border-radius: 50%;
@@ -35,7 +35,7 @@ body{
     animation: spin 2s linear infinite; /* Duración y estilo de la animación */
 }
 
-@keyframes spin {
+@keyframes spin{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
