--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,5 +1,5 @@
-*{
-    background-image: url('../fff.png');
+*¨{
+    background-image: url('../img/fondo.inicio.png');
     background-size: cover;
     background-repeat: no-repeat;
     width: auto;
