--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,5 +1,5 @@
 *¨{
-    background-image: url('../img/fondo.inicio.png');
+    /*background-image: url('../img/fondo.inicio.png');*/
     background-size: cover;
     background-repeat: no-repeat;
     width: auto;
@@ -10,8 +10,9 @@ body{
     width: auto;
     height: auto;
 }
-.h1{
-    
+h1{
+    text-align: center;
+    font-size: 50px;
 }
 
 /* Estilo del spinner overlay */
