--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -15,31 +15,51 @@ h1{
     font-size: 50px;
 }
 
-/* Estilo del spinner overlay */
+.spinner{
+border: 4px solid rgba(0, 0, 0, 0.1);
+width: 36px;
+height: 36px;
+border-radius: 50%;
+border-left-color: #09f;
+
+
+animation: spin 1s ease infinite;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* Estilo del spinner overlay 
 .spinner-overlay{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente 
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9999; /* Asegura que esté por encima de todo el contenido */
-}
 
-/* Estilo del spinner */
+
+/* Estilo del spinner 
 .spinner{
     border: 4px solid rgba(255, 255, 255, 0.3);
-    border-top: 4px solid #3498db; /* Color del spinner */
+    border-top: 4px solid #3498db; /* Color del spinner 
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    animation: spin 2s linear infinite; /* Duración y estilo de la animación */
+    animation: spin 2s linear infinite; /* Duración y estilo de la animación 
 }
 
 @keyframes spin{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-}
+}*/
