--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,18 +1,18 @@
-*{
-    /*background-image: url('../img/fondo.inicio.png');*/
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: auto;
-    height: auto;
-    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir el contenedor */
-    background-position: center;/* Centra la imagen */
+*{ 
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 body{
-    width: auto;
+    background-image: url('../img/fondo.inicio.png'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
     height: auto;
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding: auto;
     display: flex;
     justify-content: center;
     align-items: center;  
@@ -28,11 +28,11 @@ border: 4px solid rgba(0, 0, 0, 0.1);
 width: 36px;
 height: 36px;
 margin-left: 48%;/*mueve spinner hacia la izquierda*/
-margin-top: 80%;
+margin-bottom: 90%;
 border-radius: 60%;
 border-left-color: #09f;
 
-animation: spin 1s ease infinite;
+animation: spin 2s ease infinite;
 }
 
 @keyframes spin{
@@ -44,31 +44,3 @@ animation: spin 1s ease infinite;
     }
 }
 
-/* Estilo del spinner overlay 
-.spinner-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999; /* Asegura que esté por encima de todo el contenido */
-
-
-/* Estilo del spinner 
-.spinner{
-    border: 4px solid rgba(255, 255, 255, 0.3);
-    border-top: 4px solid #3498db; /* Color del spinner 
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    animation: spin 2s linear infinite; /* Duración y estilo de la animación 
-}
-
-@keyframes spin{
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}*/
