--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -23,6 +23,11 @@ h1{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+h2{
+    text-align: center;
+    font-size: 50px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 .spinner{
 border: 4px solid rgba(0, 0, 0, 0.1);
 width: 36px;
