--- a/src/styles/inicio.css
+++ b/src/styles/inicio.css
@@ -1,51 +1,51 @@
-*{ 
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+/*  * {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-body{
-    background-image: url('../img/fondo.inicio.png'); 
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: auto;
-    margin: auto;
-    padding: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;  
+.contenedor {
+  background-image: url('../img/fondo.inicio.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  padding: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-h1{
-    text-align: center;
-    font-size: 50px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-h2{
-    text-align: center;
-    font-size: 25px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-.spinner{
-border: 4px solid rgba(0, 0, 0, 0.1);
-width: 36px;
-height: 36px;
-margin-left: 48%;/*mueve spinner hacia la izquierda*/
-margin-bottom: 90%;
-border-radius: 60%;
-border-left-color: #09f;
-
-animation: spin 2s ease infinite;
+h1 {
+  text-align: center;
+  font-size: 50px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-@keyframes spin{
-    0%{
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+h2 {
+  text-align: center;
+  font-size: 25px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 36px;
+  height: 36px;
+  margin-left: 48%; /*mueve spinner hacia la izquierda
+  margin-bottom: 90%;
+  border-radius: 60%;
+  border-left-color: #09f;
+
+  animation: spin 2s ease infinite;
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+*/
